--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -553,7 +553,7 @@
                 <div *ngIf="(y !== 0) && bmxClientPageOverview && deleteRows"
                     style="min-width: 100px; position: absolute;right: 0px;">
                     <button style="outline: none;margin:3px -8px;" (dblclick)="deletRow(y)" mat-icon-button
-                        matTooltip="doble click to delete row" matTooltipPosition="left" aria-label="ranking">
+                        matTooltip="double click to delete row" matTooltipPosition="left" aria-label="ranking">
                         <mat-icon>delete_outline</mat-icon>
                     </button>
                 </div>
