--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -98,23 +98,23 @@
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
     <div>
-        <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
+        <button (click)="selectedIndex = '';editSingleTableCells = false" class="add-column" matTooltip="cancel" matTooltipPosition="above"
             *ngIf="i === selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
+        <button (click)="selectedIndex = i;editSingleTableCells = false" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button (click)="insertTextColumn()" class="add-column" matTooltip="add text column" matTooltipPosition="above"
+        <button (click)="insertTextColumn();editSingleTableCells = false" class="add-column" matTooltip="add text column" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
         </button>
-        <button (click)="insertCommentBoxColumn()" class="add-column" matTooltip="add comments column"
+        <button (click)="insertCommentBoxColumn();editSingleTableCells = false" class="add-column" matTooltip="add comments column"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
-        <button (click)="insertRow()" class="add-column" matTooltip="insert row" matTooltipPosition="above"
+        <button (click)="insertRow();editSingleTableCells = false" class="add-column" matTooltip="insert row" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
         </button>
@@ -123,24 +123,24 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
         </button>
-        <button (click)="dragRows = !dragRows" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
+        <button (click)="dragRows = !dragRows;editSingleTableCells = false" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
             matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
         </button>
-        <button (click)="deleteRows = !deleteRows" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
+        <button (click)="deleteRows = !deleteRows;editSingleTableCells = false" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
             matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
         </button>
-        <button (click)="isColumnResizerOn = !isColumnResizerOn"
+        <button (click)="isColumnResizerOn = !isColumnResizerOn;editSingleTableCells = false"
             [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" matTooltip="columns width"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
-        <button (click)="undo()" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
+        <button (click)="undo();editSingleTableCells = false" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
         </button>
-        <button *ngIf="uploadImagesIcon" (click)="toggleImageUploadBox()" class="add-column" matTooltip="uploadImages"
+        <button *ngIf="uploadImagesIcon" (click)="toggleImageUploadBox();editSingleTableCells = false" class="add-column" matTooltip="uploadImages"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
@@ -168,7 +168,7 @@
         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
             <mat-label>Copy & Paste TEST NAMES</mat-label>
             <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput"
-                placeholder="ENHANCE,Hance, En-,EVOLVE,Evo,GUARD,Gard, Guard,INVEST,In, Inv,OMNI,Omni,OPTIMAL"></textarea>
+                placeholder=""></textarea>
         </mat-form-field>
     </div>
 
