--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -1,15 +1,14 @@
-
-
-<div *ngIf="showModalVideo && bmxClientPageOverview"  id="myModal" class="modal-video" style="display: flex;flex-direction: column;gap: 2px;">
+<div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
+    style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
         <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
         <span class="checkmark">&#x2714;</span>        
     </label> -->
     <div class="modal-content">
-        <video src='{{VIDEO_PATH}}'controls></video>
+        <video src='{{CREATION_VIDEO_PATH}}' controls></video>
 
     </div>
-    <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+    <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
@@ -147,9 +146,9 @@
             </button>
         </div>
 
-        <button (click)="showModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
+        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
         <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
             matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
@@ -172,8 +171,6 @@
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
     </div>
-
-
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
@@ -258,7 +255,8 @@
             <br>
 
             <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0" max="10">
+                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                    max="10">
                 10 <br>
             </div>
             <label for="volume">{{rankingScaleValue}}</label>
@@ -464,8 +462,9 @@
                                 <ng-template #elseBlock>
                                     <div style="position: relative;">
                                         <mat-icon matRipple *ngFor="let star of  testName.STARS; let x =  index"
-                                       (click)="saveRate(y);setRating(star.id,y)"   (click)="checkAutosave(y)" [ngClass]="star.styleClass"
-                                            (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
+                                            (click)="saveRate(y);setRating(star.id,y)" (click)="checkAutosave(y)"
+                                            [ngClass]="star.styleClass" (mouseenter)="selectStar(star.id , y)"
+                                            (mouseleave)="leaveStar(y)"
                                             style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}
                                         </mat-icon>
                                     </div>
@@ -529,7 +528,7 @@
                             class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
 
 
-                        <img  class="row-box" style="width: 300px;" [src]="testName[columnName]"
+                        <img class="row-box" style="width: 300px;" [src]="testName[columnName]"
                             *ngIf="(y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
 
 
@@ -580,9 +579,10 @@
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;">
 
-            <div (click)="openSelected(y)" class="test-name-table" *ngIf="(y != 0)" [style.height]="(open(y))?'':'100px'">
+            <div (click)="openSelected(y)" class="test-name-table" *ngIf="(y != 0)"
+                [style.height]="(open(y))?'':'100px'">
                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
-            
+
                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
                     height: 30px;
